# quando

./: .gitignore  README.md  README.rst  mypy.ini  pyproject.toml
quando/: cli.py  show.py
tests/: test_quando.py
