[tool.poetry]
name = "quando"
version = "1.0.0"
description = "A command line utility to show ICS calenders."
license = "GPL-3.0-or-later"
authors = ["Tage Johansson <tajo9185@uu.student.se>"]

[tool.poetry.scripts]
quando = "quando.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
arrow = "^0.14"
requests = "^2.25.1"
appdirs = "^1.4.4"
ics = "^0.7.2"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.25.6"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
